@@ -1,62 +1,313 @@
 <!-- TOC -->
 
-- [1. synchronized原理](#1-synchronized原理)
-    - [1.1. synchronized底层](#11-synchronized底层)
-        - [1.1.1. 反编译Synchronized代码块](#111-反编译synchronized代码块)
-            - [1.1.1.1. 同步代码块](#1111-同步代码块)
-            - [1.1.1.2. 同步方法](#1112-同步方法)
-    - [1.2. synchronized的锁优化](#12-synchronized的锁优化)
-        - [1.2.1. 锁消除](#121-锁消除)
-        - [1.2.2. 锁粗化](#122-锁粗化)
-        - [1.2.3. 了解HotSpot虚拟机对象的内存布局](#123-了解hotspot虚拟机对象的内存布局)
-        - [1.2.4. 偏向锁](#124-偏向锁)
-            - [1.2.4.1. 偏向锁的性能](#1241-偏向锁的性能)
-            - [1.2.4.2. 偏向锁的失效](#1242-偏向锁的失效)
-        - [1.2.5. 轻量级锁](#125-轻量级锁)
-        - [1.2.6. 重量级锁](#126-重量级锁)
-        - [1.2.7. 锁状态总结](#127-锁状态总结)
+- [1. Synchronized原理](#1-synchronized原理)
+    - [1.1. Java对象头与monitor](#11-java对象头与monitor)
+        - [1.1.1. Java对象头](#111-java对象头)
+            - [1.1.1.1. 对象头形式](#1111-对象头形式)
+            - [1.1.1.2. 对象头的组成](#1112-对象头的组成)
+                - [1.1.1.2.1. Mark Word](#11121-mark-word)
+                - [1.1.1.2.2. class pointer](#11122-class-pointer)
+                - [1.1.1.2.3. array length](#11123-array-length)
+        - [1.1.2. monitor对象](#112-monitor对象)
+    - [1.2. Synchronized底层](#12-synchronized底层)
+        - [1.2.1. 同步代码块](#121-同步代码块)
+        - [1.2.2. 同步方法](#122-同步方法)
+    - [1.3. Synchronized的锁优化](#13-synchronized的锁优化)
+        - [1.3.1. 锁消除](#131-锁消除)
+        - [1.3.2. 锁粗化](#132-锁粗化)
+        - [1.3.3. 偏向锁](#133-偏向锁)
+            - [1.3.3.1. 偏向锁的性能](#1331-偏向锁的性能)
+            - [1.3.3.2. 偏向锁的失效](#1332-偏向锁的失效)
+        - [1.3.4. 轻量级锁](#134-轻量级锁)
+        - [1.3.5. 重量级锁](#135-重量级锁)
+        - [1.3.6. 锁状态总结](#136-锁状态总结)
 
 <!-- /TOC -->
 
-# 1. synchronized原理
+# 1. Synchronized原理
 <!-- 
- synchronized 原理知多少
-https://mp.weixin.qq.com/s/KpJZFLTeCxiuxQeiyEEJpQ
- Synchronized的底层实现快问快答 
-https://mp.weixin.qq.com/s/fL1ixtmiqKo83aUJ-cfrpg
-死磕Synchronized底层实现 
-https://mp.weixin.qq.com/s/ca_7lurrWVcA3bLCL7UJcQ
-初始synchronized关键字的偏向锁、轻量锁、重量锁 
+初始Synchronized关键字的偏向锁、轻量锁、重量锁 
 https://mp.weixin.qq.com/s/AloGilUSxjoNVDHTfq1ZGQ
-Synchronized详解（可重入、Monitor原理等）
-https://blog.csdn.net/mulinsen77/article/details/88635558
-synchronized底层原理—Monitor监视器
-https://blog.csdn.net/qq_40788718/article/details/106450724?utm_source=app
-浅析synchronized底层实现与锁升级过程 
-https://juejin.im/post/6888112467747176456
-
-synchronized 同步语句块的实现使用的是 monitorenter 和 monitorexit 指令，其中monitorenter 指令指向同步代码块的开始位置，monitorexit 指令则指明同步代码块的结束位置。当执行 monitorenter 指令时，线程试图获取锁也就是获取 monitor(monitor对象存在于每个Java对象的对象头中，synchronized 锁便是通过这种方式获取锁的，也是为什么Java中任意对象可以作为锁的原因) 的持有权.当计数器为0则可以成功获取，获取后将锁计数器设为1也就是加1。相应的在执行monitorexit 指令后，将锁计数器设为0，表明锁被释放。如果获取对象锁失败，那当前线程就要阻塞等待，直到锁被另外一个线程释放为止。
-
 -->
-
-## 1.1. synchronized底层  
-
-### 1.1.1. 反编译Synchronized代码块  
 <!-- 
-https://www.cnblogs.com/huangyin/p/6586469.html
+~~
+Synchronized底层原理—Monitor监视器
+https://blog.csdn.net/qq_40788718/article/details/106450724?utm_source=app
 -->
+
+## 1.1. Java对象头与monitor  
+[内存对象](/docs/java/JVM/MemoryObject.md)  
+
+### 1.1.1. Java对象头
+<!-- 
+Java对象头与monitor
+https://blog.csdn.net/kking_edc/article/details/108382333
+-->
+&emsp; 在JVM中，对象在内存中的布局分为三块区域：对象头、实例数据和对齐填充，如下所示：  
+![image](https://gitee.com/wt1814/pic-host/raw/master/images/java/concurrent/multi-65.png)   
+
+* 对象头：包含Mark Word、class pointer、array length共3部分。  
+    * 第一部分用于存储对象自身的运行时数据，如哈希码、GC分代年龄、锁标识状态、线程持有的锁、偏向线程ID等。这部分数据的长度在32位和64位的Java虚拟机中分别会占用32个或64个比特，官方称它为“Mark Word”。这部分是实现轻量级锁和偏向锁的关键。  
+    * 另外一部分指针类型，指向对象的类元数据类型（即对象代表哪个类）。如果是数组对象，则对象头中还有一部分用来记录数组长度。  
+    * 还会有一个额外的部分用于存储数组长度。  
+* 实例数据：存放类的属性数据信息，包括父类的属性信息，如果是数组的实例部分还包括数组的长度，这部分内存按4字节对齐。    
+* 对齐填充：JVM要求对象起始地址必须是8字节的整数倍（8字节对齐）。填充数据不是必须存在的，仅仅是为了字节对齐。   
+
+&emsp; Java头对象则是实现synchronized的锁对象的基础。  
+
+#### 1.1.1.1. 对象头形式  
+&emsp; JVM中对象头的方式有以下两种（以32位JVM为例）  
+&emsp; 普通对象：  
+![image](https://gitee.com/wt1814/pic-host/raw/master/images/java/concurrent/multi-60.png)   
+&emsp; 数组对象：  
+![image](https://gitee.com/wt1814/pic-host/raw/master/images/java/concurrent/multi-61.png)   
+
+<!--   
+工具：JOL = Java Object Layout   
+<dependencies>
+    <dependency>
+        <groupId>org.openjdk.jol</groupId>
+        <artifactId>jol-core</artifactId>
+        <version>0.9</version>
+    </dependency>
+</dependencies>
+-->
+
+#### 1.1.1.2. 对象头的组成  
+&emsp; **<font color = "red">由于对象头信息是与对象自身定义的数据无关的额外存储成本，考虑到Java虚拟机的空间使用效率，</font>** **<font color = "lime">Mark Word被设计成一个非固定的动态数据结构，</font>** 以便在极小的空间内存储尽量多的信息。它会根据对象的状态复用自己的存储空间。  
+
+##### 1.1.1.2.1. Mark Word  
+&emsp; 这部分主要用来存储对象自身的运行时数据，如hashcode、gc分代年龄等。mark word的位长度为JVM的一个Word大小，也就是说32位JVM的Mark word为32位，64位JVM为64位。
+为了让一个字大小存储更多的信息，JVM将字的最低两个位设置为标记位，不同标记位下的Mark Word示意如下：  
+![image](https://gitee.com/wt1814/pic-host/raw/master/images/java/concurrent/multi-62.png)   
+&emsp; 其中各部分的含义如下：（<font color = "red">用对象头中markword最低的三位代表锁状态，其中1位是偏向锁位，两位是普通锁位。</font>）  
+
+* lock：2位的锁状态标记位，由于希望用尽可能少的二进制位表示尽可能多的信息，所以设置了lock标记。该标记的值不同，整个mark word表示的含义不同。  
+![image](https://gitee.com/wt1814/pic-host/raw/master/images/java/concurrent/multi-63.png)   
+* bias_lock：对象是否启动偏向锁标记，只占1个二进制位。为1时表示对象启动偏向锁，为0时表示对象没有偏向锁。  
+* age：4位的Java对象年龄。在GC中，如果对象在Survivor区复制一次，年龄增加1。当对象达到设定的阈值时，将会晋升到老年代。默认情况下，并行GC的年龄阈值为15，并发GC的年龄阈值为6。由于age只有4位，所以最大值为15，这就是-XX:MaxTenuringThreshold选项最大值为15的原因。  
+* identity_hashcode：25位的对象标识Hash码，采用延迟加载技术。调用方法System.identityHashCode()计算，并会将结果写到该对象头中。当对象被锁定时，该值会移动到管程Monitor中。  
+* thread：持有偏向锁的线程ID。  
+* epoch：偏向时间戳。  
+* ptr_to_lock_record：指向栈中锁记录的指针。  
+* **<font color = "lime">ptr_to_heavyweight_monitor：指向monitor对象（也称为管程或监视器锁）的起始地址，每个对象都存在着一个monitor与之关联，对象与其monitor之间的关系有存在多种实现方式，如monitor对象可以与对象一起创建销毁或当前线程试图获取对象锁时自动生，但当一个monitor被某个线程持有后，它便处于锁定状态。</font>**  
+![image](https://gitee.com/wt1814/pic-host/raw/master/images/java/concurrent/multi-56.png)   
+![image](https://gitee.com/wt1814/pic-host/raw/master/images/java/concurrent/multi-76.png)   
+
+        为什么锁信息存放在对象头里？
+        因为在Java中任意对象都可以用作锁，因此必定要有一个映射关系，存储该对象以及其对应的锁信息（比如当前哪个线程持有锁，哪些线程在等待）。一种很直观的方法是，用一个全局map，来存储这个映射关系，但这样会有一些问题：需要对map做线程安全保障，不同的Synchronized之间会相互影响，性能差；另外当同步对象较多时，该map可能会占用比较多的内存。
+        所以最好的办法是将这个映射关系存储在对象头中，因为对象头本身也有一些hashcode、GC相关的数据，所以如果能将锁信息与这些信息共存在对象头中就好了。
+        也就是说，如果用一个全局 map 来存对象的锁信息，还需要对该 map 做线程安全处理，不同的锁之间会有影响。所以直接存到对象头。
+
+&emsp; 64位下的标记字与32位的相似：  
+![image](https://gitee.com/wt1814/pic-host/raw/master/images/java/concurrent/multi-41.png)   
+![image](https://gitee.com/wt1814/pic-host/raw/master/images/java/concurrent/multi-64.png)   
+
+----
+&emsp; 下面两张图是32位JVM和64位JVM中“Mark Word”所记录的信息  
+![image](https://gitee.com/wt1814/pic-host/raw/master/images/java/concurrent/multi-67.png)   
+![image](https://gitee.com/wt1814/pic-host/raw/master/images/java/concurrent/multi-68.png)   
+
+##### 1.1.1.2.2. class pointer
+&emsp; 这一部分用于存储对象的类型指针，该指针指向它的类元数据，JVM通过这个指针确定对象是哪个类的实例。该指针的位长度为JVM的一个字大小，即32位的JVM为32位，64位的JVM为64位。  
+&emsp; 如果应用的对象过多，使用64位的指针将浪费大量内存，统计而言，64位的JVM将会比32位的JVM多耗费50%的内存。为了节约内存可以使用选项+UseCompressedOops开启指针压缩，其中，oop即ordinary object pointer普通对象指针。开启该选项后，下列指针将压缩至32位：  
+
+* 每个Class的属性指针（即静态变量）
+* 每个对象的属性指针（即对象变量）
+* 普通对象数组的每个元素指针
+
+&emsp; 当然，也不是所有的指针都会压缩，一些特殊类型的指针JVM不会优化，比如指向PermGen的Class对象指针(JDK8中指向元空间的Class对象指针)、本地变量、堆栈元素、入参、返回值和NULL指针等。  
+
+##### 1.1.1.2.3. array length  
+&emsp; 如果对象是一个数组，那么对象头还需要有额外的空间用于存储数组的长度，这部分数据的长度也随着JVM架构的不同而不同：32位的JVM上，长度为32位；64位JVM则为64位。64位JVM如果开启+UseCompressedOops选项，该区域长度也将由64位压缩至32位。  
+
+### 1.1.2. monitor对象  
+<!-- 
+https://mp.weixin.qq.com/s/nzEt7_FyOUMPY5wOJ-EeKg
+
+&emsp; 任何对象都有一个monitor与之相关联，当且一个monitor被持有之后，它将处于锁定状态。线程执行到monitorenter指令时，将会尝试获取对象所对应的monitor所有权，即尝试获取对象的锁。
+&emsp; monitor对象介绍：  
+&emsp; 每个对象有一个监视器锁（monitor），monitor本质是基于操作系统互斥（mutex）实现的，操作系统实现线程之间切换需要从用户态到内核态切换，成本非常高。一个monitor只能被一个线程拥有。
+-->
+&emsp; 每个对象实例都会有个Monitor对象，Monitor对象和Java对象一同创建并消毁，在Java虚拟机(HotSpot)中，Monitor是基于C++实现的，在虚拟机的ObjectMonitor.hpp文件中。ObjectMonitor的成员变量如下( Hospot 1.8) ：  
+
+```C
+ObjectMonitor() {
+    _header       = NULL;
+    _count        = 0;
+    _waiters      = 0,
+    _recursions   = 0;  // 线程重入次数
+    _object       = NULL;  // 存储Monitor对象
+    _owner        = NULL;  // 持有当前线程的owner
+    _WaitSet      = NULL;  // wait状态的线程列表
+    _WaitSetLock  = 0 ;
+    _Responsible  = NULL ;
+    _succ         = NULL ;
+    _cxq          = NULL ;  // 单向列表
+    FreeNext      = NULL ;
+    _EntryList    = NULL ;  // 处于等待锁状态block状态的线程列表
+    _SpinFreq     = 0 ;
+    _SpinClock    = 0 ;
+    OwnerIsThread = 0 ;
+    _previous_owner_tid = 0;
+  }
+```
+&emsp; ObjectMonitor中有两个队列，_WaitSet 和 _EntryList，用来保存ObjectWaiter对象列表( 每个等待锁的线程都会被封装成ObjectWaiter对象)。  
+&emsp; _WaitSet和 _EntryList有什么区别呢？  
+​&emsp; 当多个线程同时访问同步代码时，首先进入的就是_EntryList 。当获得对象的monitor时，_owner 指向当前线程，_count进行加1。  
+​&emsp; 若持有monitor的线程调用wait()，则释放持有的monitor，_owner变为null，_count减1。  
+​&emsp; 同时该线程进入_WaitSet等待被唤醒。如果执行完毕，也释放monitor。  
+
+&emsp; 整个monitor运行的机制过程如下：  
+&emsp; _owner指向持有ObjectMonitor对象的线程，当多个线程同时访问一段同步代码时，首先会进入 _EntryList 集合，当线程获取到对象的monitor后进入_Owner区域并把monitor中的owner变量设置为当前线程同时monitor中的计数器count加1，若线程调用 wait() 方法，将释放当前持有的monitor，owner变量恢复为null，count自减1，同时该线程进入 WaitSe t集合中等待被唤醒。若当前线程执行完毕也将释放monitor(锁)并复位变量的值，以便其他线程进入获取monitor(锁)。  
+&emsp; 具体见下图：  
+![image](https://gitee.com/wt1814/pic-host/raw/master/images/java/concurrent/multi-55.png)  
+&emsp; 因此，monitor对象存在于每个Java对象的对象头中(存储的指针的指向)，Synchronized锁便是通过这种方式获取锁的，也是为什么Java中任意对象可以作为锁的原因，同时也是notify/notifyAll/wait等方法存在于顶级对象Object中的原因。  
+<!-- 
+&emsp; 那你能说说看monitor吗，到底是怎么实现了加锁和锁释放的呢？  
+&emsp; 当多个线程同时访问同一段代码的时候，这些线程会被放在EntrySet集合，处于阻塞状态的线程都会被放在该列表当中，当线程获取到对象的monitor时，监视器锁monitor本质又是依赖于底层的操作系统的 Mutex Lock 来实现的，线程获取Mutex成功，这个时候其他的线程就无法获取到该Mutex。  
+&emsp; 如果线程调用了wait方法，那么该线程就会释放掉持有的Mutex，并且该线程会进入到WaitSet集合(等待集合中)，等待下一次被其他的线程notify/notifyAll唤醒，如果当前线程的方法执行完毕，那么它也会释放掉所持有的Mutex。  
+
+&emsp; 每个对象都有一个monitor对应，如果有其它的线程获取了这个对象的monitor，当前的线程就要一直等待，直到获得 monitor的线程放弃monitor，当前的线程才有机会获得monitor。  
+&emsp; 如果monitor没有被任何线程获取，那么当前线程获取这个monitor，把monitor的entry count设置为1。表示这个monitor被线程1占用了。  
+&emsp; 当前线程获取了monitor之后，会增加这个monitor的时间计数，来记录当前线程占用了monitor多长时间。  
+
+有两个队列waitSet和entryList。
+
+    当多个线程进入同步代码块时，首先进入entryList
+    有一个线程获取到monitor锁后，就赋值给当前线程，并且计数器+1
+    如果线程调用wait方法，将释放锁，当前线程置为null，计数器-1，同时进入waitSet等待被唤醒，调用notify或者notifyAll之后又会进入entryList竞争锁
+    如果线程执行完毕，同样释放锁，计数器-1，当前线程置为null
+![image](https://gitee.com/wt1814/pic-host/raw/master/images/java/concurrent/multi-69.png)  
+
+-->
+&emsp; 下面在看一下加锁的代码：  
+
+```text
+void ATTR ObjectMonitor::enter(TRAPS) {
+  // The following code is ordered to check the most common cases first
+  // and to reduce RTS->RTO cache line upgrades on SPARC and IA32 processors.
+
+  //获取当前线程指针
+  Thread * const Self = THREAD ;
+  void * cur ;
+
+  //尝试通过CAS将OjectMonitor的_owner设置为当前线程；
+  cur = Atomic::cmpxchg_ptr (Self, &_owner, NULL) ;
+
+  //尝试失败
+  if (cur == NULL) {
+     // Either ASSERT _recursions == 0 or explicitly set _recursions = 0.
+     assert (_recursions == 0   , "invariant") ;
+     assert (_owner      == Self, "invariant") ;
+     // CONSIDER: set or assert OwnerIsThread == 1
+     return ;
+  }
+
+  //如果cur等于当前线程，说明当前线程已经持有锁，即为锁重入，_recursions自增，并获得锁。 
+  if (cur == Self) {
+     // TODO-FIXME: check for integer overflow!  BUGID 6557169.
+     _recursions ++ ;
+     return ;
+  }
+
+  //第一次设置_owner成功,锁的重入次数_recursions设置为1，_owner设置为当前线程，
+  if (Self->is_lock_owned ((address)cur)) {
+    assert (_recursions == 0, "internal state error");
+    _recursions = 1 ;
+    // Commute owner from a thread-specific on-stack BasicLockObject address to
+    // a full-fledged "Thread *".
+    _owner = Self ;
+    OwnerIsThread = 1 ;
+    return ;
+  }
+
+    //代码省略。。。。。
+
+    // TODO-FIXME: change the following for(;;) loop to straight-line code.
+    //如果竞争是失败的，会进入下面中的无线循环，反复调用EnterI方法，自旋尝试获取锁
+    for (;;) {
+      jt->set_suspend_equivalent();
+      // cleared by handle_special_suspend_equivalent_condition()
+      // or java_suspend_self()
+
+      EnterI (THREAD) ;
+
+      if (!ExitSuspendEquivalent(jt)) break ;
+
+      //
+      // We have acquired the contended monitor, but while we were
+      // waiting another thread suspended us. We don't want to enter
+      // the monitor while suspended because that would surprise the
+      // thread that suspended us.
+      //
+          _recursions = 0 ;
+      _succ = NULL ;
+      exit (false, Self) ;
+
+      jt->java_suspend_self();
+    }
+
+    //代码省略。。。。。。。。。。。。。
+```
+
+&emsp; 下面再看一下释放锁的代码：  
+
+```text
+void ATTR ObjectMonitor::exit(bool not_suspended, TRAPS) {
+   Thread * Self = THREAD ;
+   if (THREAD != _owner) {
+     if (THREAD->is_lock_owned((address) _owner)) {
+       // Transmute _owner from a BasicLock pointer to a Thread address.
+       // We don't need to hold _mutex for this transition.
+       // Non-null to Non-null is safe as long as all readers can
+       // tolerate either flavor.
+       assert (_recursions == 0, "invariant") ;
+       _owner = THREAD ;
+       _recursions = 0 ;
+       OwnerIsThread = 1 ;
+     } else {
+       // NOTE: we need to handle unbalanced monitor enter/exit
+       // in native code by throwing an exception.
+       // TODO: Throw an IllegalMonitorStateException ?
+       TEVENT (Exit - Throw IMSX) ;
+       assert(false, "Non-balanced monitor enter/exit!");
+       if (false) {
+          THROW(vmSymbols::java_lang_IllegalMonitorStateException());
+       }
+       return;
+     }
+   }
+
+   if (_recursions != 0) {
+     _recursions--;        // this is simple recursive enter
+     TEVENT (Inflated exit - recursive) ;
+     return ;
+   }
+
+   //代码省略。。。。。。。。。。。。。
+}
+```
+
+## 1.2. Synchronized底层  
 
 ```java
 public class SyncDemo {
 
-    public synchronized void play() {}
+    public Synchronized void play() {}
 
     public void learn() {
-        synchronized(this) {
+        Synchronized(this) {
         }
     }
 }
 ```
+
+<!-- 编译完成，我们去对应目录执行 javap -c xxx.class 命令查看反编译的文件： 
+https://juejin.cn/post/6888112467747176456 
+先将SynchronizedDemo.java使用javac SynchronizedDemo.java命令将其编译成SynchronizedDemo.class。然后使用javap -c SynchronizedDemo.class反编译字节码。  
+通过javap -v -c SynchronizedMethodDemo.class命令反编译SynchronizedMethodDemo类。-v参数即-verbose，表示输出反编译的附加信息。下面以反编译普通方法为例。  
+-->
 &emsp; 利用javap工具查看生成的class文件信息分析Synchronized，下面是部分信息:  
 
     查看字节码工具：  
@@ -78,9 +329,9 @@ public com.zzw.juc.sync.SyncDemo();
         Start  Length  Slot  Name   Signature
             0       5     0  this   Lcom/zzw/juc/sync/SyncDemo;
 
-  public synchronized void play();
+  public Synchronized void play();
     descriptor: ()V
-    flags: ACC_PUBLIC, ACC_SYNCHRONIZED
+    flags: ACC_PUBLIC, ACC_Synchronized
     Code:
       stack=0, locals=1, args_size=1
          0: return
@@ -115,45 +366,19 @@ public com.zzw.juc.sync.SyncDemo();
 ```
 &emsp; JVM基于进入和退出Monitor对象来实现方法同步和代码块同步，但两者实现细节不同。  
 
-* **<font color = "red">方法同步：依靠的是方法修饰符上的ACC_SYNCHRONIZED实现。</font>**  
+* **<font color = "red">方法同步：依靠的是方法修饰符上的ACC_Synchronized实现。</font>**  
 * **<font color = "red">代码块同步：使用monitorenter和monitorexit指令实现。</font>**  
 
-#### 1.1.1.1. 同步代码块  
-&emsp; 同步代码块：monitorenter指令插入到同步代码块的开始位置，monitorexit指令插入到同步代码块的结束位置，<font color = "red">JVM需要保证每一个monitorenter都有一个monitorexit与之相对应。</font>  
-&emsp; monitorenter操作的目标一定要是一个对象，类型是reference。Reference实际就是堆里的一个存放对象的地址。每个对象（reference）都有一个monitor对应，如果有其它的线程获取了这个对象的monitor，当前的线程就要一直等待，直到获得 monitor的线程放弃monitor，当前的线程才有机会获得monitor。  
-&emsp; 如果monitor没有被任何线程获取，那么当前线程获取这个monitor，把monitor的entry count设置为1。表示这个monitor被线程1占用了。  
-&emsp; 当前线程获取了monitor之后，会增加这个monitor的时间计数，来记录当前线程占用了monitor多长时间。  
-
-<!-- 
-&emsp; 任何对象都有一个monitor与之相关联，当且一个monitor被持有之后，它将处于锁定状态。线程执行到monitorenter指令时，将会尝试获取对象所对应的monitor所有权，即尝试获取对象的锁。
-&emsp; monitor对象介绍：  
-&emsp; 每个对象有一个监视器锁（monitor），monitor本质是基于操作系统互斥（mutex）实现的，操作系统实现线程之间切换需要从用户态到内核态切换，成本非常高。一个monitor只能被一个线程拥有。
-
-```text
-    monitor对象重要属性说明：
-_owner：指向持有ObjectMonitor对象的线程；
-_WaitSet：存放处于wait状态的线程队列；
-_EntryList：存放处于等待锁block状态的线程队列；
-_recursions：锁的重入次数；
-_count：用来记录该线程获取锁的次数；
-
-    假如当前线程A、B、C同时访问同步块。假如A获取到锁，也就会将 monitor 对象中的 _owner 的值赋值为当前线程ID。B、C线程会进入EntryList中。count =1 ，recursions=1。假如A线程第二次进入同步快，count = 2, recursions=2，当前线程退出时，count和recursions会减一，直到count=0, recursions=0时，说明线程A释放了monitor锁，然后会唤醒EntryList中的线程，EntryList线程会竞争monitor，竞争到了，和线程A的操作一致。
-```
--->
-
-<!-- 
-监视器monitor
-https://www.jianshu.com/p/c3313dcf2c23
-
--->
+### 1.2.1. 同步代码块  
+&emsp; monitorenter指令插入到同步代码块的开始位置，monitorexit指令插入到同步代码块的结束位置，<font color = "red">JVM需要保证每一个monitorenter都有一个monitorexit与之相对应。</font>  
 
 &emsp; 两条指令的作用：  
 * monitorenter：  
+&emsp; 每一个对象都会和一个监视器monitor关联。监视器被占用时会被锁住，其他线程无法来获取该monitor。  
 &emsp; <font color = "red">线程执行monitorenter指令时尝试获取monitor的所有权，当monitor被占用时就会处于锁定状态。</font>过程如下：
     1. <font color = "red">如果monitor的进入数为0，则该线程进入monitor，然后将进入数设置为1，该线程即为monitor的所有者。</font>  
-    2. 如果线程已经占有该monitor，只是重新进入，则进入monitor的进入数加1，所以synchronized关键字实现的锁是可重入的锁。  
+    2. 如果线程已经占有该monitor，只是重新进入，则进入monitor的进入数加1，所以Synchronized关键字实现的锁是可重入的锁。  
     3. 如果其他线程已经占用了monitor，则该线程进入阻塞状态，直到monitor的进入数为0，再重新尝试获取monitor的所有权。  
-
 * monitorexit：  
 &emsp; 执行monitorexit的线程必须是objectref所对应的monitor的所有者。  
 &emsp; 指令执行时，monitor的进入数减1，如果减1后进入数为0，当前线程释放monitor，不再是这个monitor的所有者。其他被这个monitor阻塞的线程可以尝试去获取这个monitor的所有权。  
@@ -162,16 +387,48 @@ https://www.jianshu.com/p/c3313dcf2c23
 
 &emsp; 总结：Synchronized的实现原理，Synchronized的语义底层是通过一个monitor的对象来完成，其实wait/notify等方法也依赖于monitor对象，这就是为什么只有在同步的块或者方法中才能调用wait/notify等方法，否则会抛出java.lang.IllegalMonitorStateException的异常的原因。  
 
-#### 1.1.1.2. 同步方法  
-&emsp; synchronized方法会被翻译成普通的方法调用和返回指令，如：invokevirtual、areturn指令，在JVM字节码层面并没有任何特别的指令来实现被synchronized修饰的方法，<font color= "lime">而是在Class文件的方法表中将该方法的access_flags字段中的synchronized标志位置1，表示该方法是同步方法，</font>并使用调用该方法的对象或该方法所属的Class在JVM的内部对象表示Klass做为锁对象。  
-
 <!-- 
+monitorenter ：
+每个对象有一个监视器锁（monitor）。当monitor被占用时就会处于锁定状态，线程执行monitorenter指令时尝试获取monitor的所有权，过程如下：
 
-当JVM执行引擎执行某一个方法时，其会从方法区中获取该方法的access_flags，检查其是否有ACC_SYNCRHONIZED标识符，若是有该标识符，则说明当前方法是同步方法，需要先获取当前对象的monitor，再来执行方法。
+1、如果monitor的进入数为0，则该线程进入monitor，然后将进入数设置为1，该线程即为monitor的所有者。
 
+2、如果线程已经占有该monitor，只是重新进入，则进入monitor的进入数加1.
+
+3.如果其他线程已经占用了monitor，则该线程进入阻塞状态，直到monitor的进入数为0，再重新尝试获取monitor的所有权。
+
+monitorexit：
+
+　　执行monitorexit的线程必须是objectref所对应的monitor的所有者。
+
+　　指令执行时，monitor的进入数减1，如果减1后进入数为0，那线程退出monitor，不再是这个monitor的所有者。其他被这个monitor阻塞的线程可以尝试去获取这个 monitor 的所有权。
+
+　　Synchronized的语义底层是通过一个monitor的对象来完成，其实wait/notify等方法也依赖于monitor对象，这就是为什么只有在同步的块或者方法中才能调用wait/notify等方法，否则会抛出java.lang.IllegalMonitorStateException的异常的原因。
+
+「monitorenter」：
+Java对象天生就是一个Monitor，当monitor被占用，它就处于锁定的状态。
+每个对象都与一个监视器关联。且只有在有线程持有的情况下，监视器才被锁定。
+执行monitorenter的线程尝试获得monitor的所有权：
+
+如果与objectref关联的监视器的条目计数为0，则线程进入监视器，并将其条目计数设置为1。然后，该线程是monitor的所有者。如果线程已经拥有与objectref关联的监视器，则它将重新进入监视器，从而增加其条目计数。这个就是锁重入。如果另一个线程已经拥有与objectref关联的监视器，则该线程将阻塞，直到该监视器的条目计数为零为止，然后再次尝试获取所有权。
+「monitorexit」：
+一个或多个MonitorExit指令可与Monitorenter指令一起使用，它们共同实现同步语句。
+尽管可以将monitorenter和monitorexit指令用于提供等效的锁定语义，但它们并未用于同步方法的实现中。
+JVM在完成monitorexit时的处理方式分为正常退出和出现异常时退出：
+
+常规同步方法完成时监视器退出由Java虚拟机的返回指令处理。也就是说程序正常执行完毕的时候，JVM有一个指令会隐式的完成monitor的退出---monitorexit，这个指令是athrow。如果同步语句出现了异常时，JVM的异常处理机制也能monitorexit。
+![image](https://gitee.com/wt1814/pic-host/raw/master/images/java/concurrent/multi-57.png)  
+简单的加锁解锁过程
+因此，执行同步代码块后首先要执行monitorenter指令，退出的时候monitorexit指令。  
 -->
 
-## 1.2. synchronized的锁优化
+### 1.2.2. 同步方法  
+&emsp; 当JVM执行引擎执行某一个方法时，其会从方法区中获取该方法的access_flags，检查其是否有ACC_SYNCRHONIZED标识符，若是有该标识符，则说明当前方法是同步方法，需要先获取当前对象的monitor，再来执行方法，方法执行完后再释放monitor。在方法执行期间，其他任何线程都无法再获得同一个monitor对象。 其实本质上没有区别，只是方法的同步是一种隐式的方式来实现，无需通过字节码来完成。  
+
+## 1.3. Synchronized的锁优化
+<!-- Synchronized
+https://www.cnblogs.com/dennyzhangdd/p/6734638.html
+-->
 &emsp; **<font color = "lime">锁升级过程主要是理解偏向锁、轻量级锁的升级过程。</font>**    
 &emsp; **<font color = "lime">~~一句话概述：新线程竞争锁时，获取锁对象的 Markword。起初只有一个线程，会获取到偏向锁，当另一个线程竞争锁，只cas一次，抢占到撤销原线程的偏向锁；抢占不到升级成轻量级锁；轻量级锁加锁过程中会使用自旋锁，新线程自旋多次获取轻量级锁失败（锁对象不是当前线程），会升级成重量级锁。并且已经获取轻量级锁的线程在释放锁时，也会升级成重量级锁。~~</font>**  
 
@@ -202,7 +459,7 @@ https://www.jianshu.com/p/c3313dcf2c23
 -->
 
 
-### 1.2.1. 锁消除  
+### 1.3.1. 锁消除  
 <!-- https://juejin.im/post/5d2303b5f265da1b8f1ae5b0 -->
 &emsp; 锁消除是指虚拟机即时编译器在运行时，对一些代码上要求同步，但是被检测到不可能存在共享数据竞争的锁进行清除。锁清除的主要判定依据来源于逃逸分析的数据支持，如果判断在一段代码中，堆上的所有数据都不会逃逸出去从而被其他线程访问到，那就可以把它们当做栈上数据对待，认为它们是线程私有的，同步枷锁自然就无需进行。  
 &emsp; 简单来说，Java中使用同步来保证数据的安全性，但是<font color = "red">对于一些明显不会产生竞争的情况下，Jvm会根据现实执行情况对代码进行锁消除以提高执行效率。</font>  
@@ -215,9 +472,9 @@ public void add(String str1,String str2){
          sb.append(str1).append(str2);
 }
 ```
- &emsp; StringBuffer是线程安全的，因为它的关键方法都是被synchronized修饰过的，但看上面这段代码，会发现，sb这个引用只会在add方法中使用，不可能被其它线程引用（因为是局部变量，栈私有），因此sb是不可能共享的资源，JVM会自动消除StringBuffer对象内部的锁。  
+ &emsp; StringBuffer是线程安全的，因为它的关键方法都是被Synchronized修饰过的，但看上面这段代码，会发现，sb这个引用只会在add方法中使用，不可能被其它线程引用（因为是局部变量，栈私有），因此sb是不可能共享的资源，JVM会自动消除StringBuffer对象内部的锁。  
 
-### 1.2.2. 锁粗化  
+### 1.3.2. 锁粗化  
 &emsp; 原则上，在编写代码的时候，总是推荐将同步块的作用范围限制得尽量小，一直在共享数据的实际作用域才进行同步，这样是为了使得需要同步的操作数量尽可能变小，如果存在锁竞争，那等待线程也能尽快拿到锁。  
 &emsp; 大部分情况下，上面的原则都是没有问题的，但是如果一系列的连续操作都对同一个对象反复加锁和解锁，那么会带来很多不必要的性能消耗。  
 &emsp; 如果虚拟机探测到有这样<font color = "lime">一串零碎的操作都对同一个对象加锁，将会把加锁同步的范围扩展（粗化）到整个操作序列到外部。</font>  
@@ -243,44 +500,15 @@ public String test(String str){
 ```
 &emsp; JVM会检测到这样一连串的操作都对同一个对象加锁（while 循环内 100 次执行 append，没有锁粗化的就要进行 100 次加锁/解锁），此时 JVM 就会将加锁的范围粗化到这一连串的操作的外部（比如 while 虚幻体外），使得这一连串操作只需要加一次锁即可。  
 
-### 1.2.3. 了解HotSpot虚拟机对象的内存布局  
 
-&emsp; 下面讲解Synchroized的偏向锁、轻量级锁、重量级锁。 **<font color = "red">需要先了解HotSpot虚拟机对象的内存布局。</font>** 在64位的HotSpot虚拟机中，不同状态下对象头的存储内容如下图所示。  
-![image](https://gitee.com/wt1814/pic-host/raw/master/images/java/concurrent/multi-41.png)   
-&emsp; HotSpot虚拟机的对象头（Object Header）分为三部分：对象头(Header)、实例数据(Instance Data)、对齐填充(Padding)。<font color = "red">用对象头中markword最低的三位代表锁状态，其中1位是偏向锁位，两位是普通锁位。</font>  
-
-* 对象头：
-    * 第一部分用于存储对象自身的运行时数据，如哈希码、GC分代年龄、锁标识状态、线程持有的锁、偏向线程ID等。这部分数据的长度在32位和64位的Java虚拟机中分别会占用32个或64个比特，官方称它为“Mark Word”。这部分是实现轻量级锁和偏向锁的关键。  
-    * 另外一部分指针类型，指向对象的类元数据类型（即对象代表哪个类）。如果是数组对象，则对象头中还有一部分用来记录数组长度。  
-    * 还会有一个额外的部分用于存储数组长度。  
-* 实例数据：存储对象真正的有效信息（包括父类继承下来的和自己定义的）  
-* 对齐填充：JVM要求对象起始地址必须是8字节的整数倍（8字节对齐） 
-
-&emsp; **<font color = "red">由于对象头信息是与对象自身定义的数据无关的额外存储成本，考虑到Java虚拟机的空间使用效率，</font>** **<font color = "lime">Mark Word被设计成一个非固定的动态数据结构，</font>** 以便在极小的空间内存储尽量多的信息。它会根据对象的状态复用自己的存储空间。  
-
-        为什么锁信息存放在对象头里？
-        因为在Java中任意对象都可以用作锁，因此必定要有一个映射关系，存储该对象以及其对应的锁信息（比如当前哪个线程持有锁，哪些线程在等待）。一种很直观的方法是，用一个全局map，来存储这个映射关系，但这样会有一些问题：需要对map做线程安全保障，不同的synchronized之间会相互影响，性能差；另外当同步对象较多时，该map可能会占用比较多的内存。
-        所以最好的办法是将这个映射关系存储在对象头中，因为对象头本身也有一些hashcode、GC相关的数据，所以如果能将锁信息与这些信息共存在对象头中就好了。
-        也就是说，如果用一个全局 map 来存对象的锁信息，还需要对该 map 做线程安全处理，不同的锁之间会有影响。所以直接存到对象头。
-
-<!--   
-工具：JOL = Java Object Layout   
-<dependencies>
-    <dependency>
-        <groupId>org.openjdk.jol</groupId>
-        <artifactId>jol-core</artifactId>
-        <version>0.9</version>
-    </dependency>
-</dependencies>
--->
-
-### 1.2.4. 偏向锁  
+### 1.3.3. 偏向锁  
 &emsp; <font color = "red">偏向锁定义：</font>偏向锁是指偏向于让第一个获取锁对象的线程，这个线程在之后获取该锁就不再需要进行同步操作。 
-
 <!-- 
+偏向锁：当线程访问同步块获取锁时，会在对象头和栈帧中的锁记录里存储偏向锁的线程ID，之后这个线程再次进入同步块时都不需要CAS来加锁和解锁了，偏向锁会永远偏向第一个获得锁的线程，如果后续没有其他线程获得过这个锁，持有锁的线程就永远不需要进行同步，反之，当有其他线程竞争偏向锁时，持有偏向锁的线程就会释放偏向锁。可以用过设置-XX:+UseBiasedLocking开启偏向锁。
 偏向锁 - markword 上记录当前线程指针，下次同一个线程加锁的时候，不需要争用，只需要判断线程指针是否同一个，所以，偏向锁，偏向加锁的第一个线程 。hashCode备份在线程栈上 线程销毁，锁降级为无锁
--->
 
+顾名思义，偏向锁会偏向某个线程，其不会造成用户态与内核态的切换。偏向锁在第一次加锁时会偏向拿到锁的线程，当这个线程再来加锁时，就可以直接拿到锁而不用做其他的逻辑判断，所以在这种场景下其性能最高。不过，如果有其他线程再来加锁的话，JVM就会把偏向锁膨胀为轻量锁（没有锁竞争）或重量锁（有锁竞争）了。
+-->
 &emsp; 偏向锁的获得和撤销流程图解：  
 ![image](https://gitee.com/wt1814/pic-host/raw/master/images/java/concurrent/multi-31.png)   
 
@@ -303,6 +531,14 @@ public String test(String str){
     1. 原获得偏向锁的线程如果已经退出了临界区，也就是同步代码块执行完了，那么这个时候会把对象头设置成无锁状态并且争抢锁的线程可以基于 CAS 重新偏向之前线程。
     2. 如果原获得偏向锁的线程的同步代码块还没执行完，处于临界区之内，这个时候会把原获得偏向锁的线程升级为轻量级锁后继续执行同步代码块。
 
+<!--
+撤销锁
+如果有其他线程出现，尝试获取偏向锁，让偏向锁处于竞争状态，那么当前偏向锁就会撤销。撤销偏向锁时，首先会暂停持有偏向锁的线程，并将线程ID设为空，然后检查该线程是否存活：
+
+    当暂停线程非存活，则设置对象头为无锁状态。
+    当暂停线程存活，执行偏向锁的栈，最后对象头的保存其他获取到偏向锁的线程ID或者转向无锁状态。
+-->
+
 ----
 &emsp; 引用《阿里手册：码出高效》的描述再理解一次：
 
@@ -321,24 +557,29 @@ public String test(String str){
 * 可重偏向(Rebiasable)。在此状态下，偏向锁的epoch字段是无效的（与锁对象对应的class的mark_prototype的epoch值不匹配）。下一个试图获取锁对象的线程将会面临这个情况，使用原子CAS指令可将该锁对象绑定于当前线程。**在批量重偏向的操作中，未被持有的锁对象都被至于这个状态，以便允许被快速重偏向。**
 * 已偏向(Biased)。这种状态下，thread pointer非空，且epoch为有效值——意味着其他线程正在持有这个锁对象。
 
-#### 1.2.4.1. 偏向锁的性能   
+#### 1.3.3.1. 偏向锁的性能   
 &emsp; 偏向锁可以提高带有同步但无竞争的程序性能，但它同样是一个带有效益权衡（Trade Off）性质的优化，也就是说它并非总是对程序运行有利。 **<font color = "lime">如果程序中大多数的锁都总是被多个不同的线程访问，那偏向模式就是多余的。</font>** 在具体问题具体分析的前提下，有时候使用参数-XX：-UseBiasedLocking来禁止偏向锁优化反而可以提升性能。 
+<!-- 
+JVM默认会设置一个4秒钟的偏向延迟，也就是说JVM启动4秒钟内创建出的所有对象都是不可偏向的（也就是上图中的无锁不可偏向状态），如果对这些对象去加锁，加的会是轻量锁而不是偏向锁
+-->
 
-#### 1.2.4.2. 偏向锁的失效  
+#### 1.3.3.2. 偏向锁的失效  
 &emsp; 如果计算过对象的hashcode()，则对象无法进入偏向状态。    
 ![image](https://gitee.com/wt1814/pic-host/raw/master/images/java/concurrent/multi-39.png)  
 ![image](https://gitee.com/wt1814/pic-host/raw/master/images/java/concurrent/multi-40.png)  
 
-&emsp; 轻量级锁重量级锁的hashCode存在什么地方？
+&emsp; 轻量级锁重量级锁的hashCode存在什么地方？  
 &emsp; 存在线程栈中，轻量级锁的LR中，或是代表重量级锁的ObjectMonitor的成员中。  
 
-### 1.2.5. 轻量级锁  
+### 1.3.4. 轻量级锁  
 &emsp; 轻量级锁在加锁过程中，用到了自旋锁。  
 &emsp; **<font color = "lime">为什么有了自旋锁还需要重量级锁？</font>**  
 &emsp; 偏向锁、自旋锁都是用户空间完成。重量级锁是需要向内核申请。  
 &emsp; 自旋是消耗CPU资源的，如果锁的时间长，或者自旋线程多，CPU会被大量消耗。  
 &emsp; 重量级锁有等待队列，所有拿不到锁的线程进入等待队列，不需要消耗CPU资源。  
-
+<!-- 
+自旋锁：由于大部分时候，锁被占用的时间很短，共享变量的锁定时间也很短，所有没有必要挂起线程，用户态和内核态的来回上下文切换严重影响性能。自旋的概念就是让线程执行一个忙循环，可以理解为就是啥也不干，防止从用户态转入内核态，自旋锁可以通过设置-XX:+UseSpining来开启，自旋的默认次数是10次，可以使用-XX:PreBlockSpin设置。
+-->
 &emsp; **<font color = "lime">偏向锁是否一定比自旋锁效率高？</font>**  
 &emsp; <font color = "red">不一定，在明确知道会有多线程竞争的情况下，偏向锁肯定会涉及锁撤销，这时候直接使用自旋锁。</font>  
 &emsp; <font color = "red">JVM启动过程，一般会有很多线程竞争，所以默认情况启动时不打开偏向锁，过一段时间再打开。</font>  
@@ -368,7 +609,14 @@ public String test(String str){
 
         线程A获取轻量级锁时会把对象头中的MarkWord复制一份到线程A的栈帧中创建用于存储锁记录的空间DisplacedMarkWord，然后使用CAS将对象头中的内容替换成线程A存储DisplacedMarkWord的地址。如果这时候出现线程B来获取锁，线程B也跟线程A同样复制对象头的MarkWord到自己的DisplacedMarkWord中，如果线程A锁还没释放，这时候那么线程B的CAS操作会失败，会继续自旋，当然不可能让线程B一直自旋下去，自旋到一定次数（固定次数/自适应）就会升级为重量级锁。 
 
-### 1.2.6. 重量级锁
+### 1.3.5. 重量级锁
+<!-- 
+
+为什么说Synchronized是重量级锁？
+
+云霄：这个问题，上面有涉及，Synchronized底层是monitor实现，监视器锁monitor本质又是依赖于底层的操作系统的 Mutex Lock 来实现的，这就涉及到操作系统让线程从用户态切换到内核态。这个成本非常高，状态之间的转换需要相对比较长的时间，这就是为什么Synchronized 效率低的原因。因此，这种依赖于操作系统 Mutex Lock 所实现的锁我们称之为重量级锁。  
+
+-->
 &emsp; <font color = "lime">重量级锁是依赖对象内部的monitor锁来实现的，而monitor又依赖操作系统的MutexLock(互斥锁)来实现的，所以重量级锁也称为互斥锁。</font>  
 &emsp; <font color = "lime">为什么说重量级线程开销很大？</font>  
 &emsp; 当系统检查到锁是重量级锁之后，会把等待想要获得锁的线程进行阻塞，被阻塞的线程不会消耗cpu。但是阻塞或者唤醒一个线程时，都需要操作系统来帮忙，这就需要从用户态转换到内核态，而转换状态是需要消耗很多时间的，有可能比用户执行代码的时间还要长。  
@@ -377,13 +625,13 @@ public String test(String str){
 &emsp; 升级为重量级锁过程：  
 &emsp; 升级重量级锁--->向操作系统申请资源，linux mutex，CPU从3级-0级系统调用，线程挂起，进入等待队列，等待操作系统的调度，然后再映射回用户空间。  
 
-### 1.2.7. 锁状态总结  
+### 1.3.6. 锁状态总结  
 &emsp; JDK 1.6 引入了偏向锁和轻量级锁，从而让锁拥有了四个状态： **无锁状态（unlocked）(MarkWord标志位01，没有线程执行同步方法/代码块时的状态)** 、偏向锁状态（biasble）、轻量级锁状态（lightweight locked）和重量级锁状态（inflated）。  
-
-&emsp; 重量级排序 ：无锁 > 轻量级锁 > 偏向锁 > 重量级锁    
+![image](https://gitee.com/wt1814/pic-host/raw/master/images/java/concurrent/multi-66.png)  
+![image](https://gitee.com/wt1814/pic-host/raw/master/images/java/concurrent/multi-70.png)  
 &emsp; **<font color = "lime">锁降级：</font>** <font color = "red">Hotspot在1.8开始有了锁降级。在STW期间JVM进入安全点时如果发现有闲置的monitor（重量级锁对象），会进行锁降级。</font>
 
-&emsp; **<font color = "lime">synchronized锁对比：</font>**  
+&emsp; **<font color = "lime">Synchronized锁对比：</font>**  
 &emsp; 用户空间锁VS重量级锁：  
 
 * 偏向锁、自旋锁都是用户空间完成。  
